# tauri-plugin-sharekit

./: .prettierignore  Cargo.toml  README.md  build.rs  cspell.json  eslint.config.js  package.json  pnpm-lock.yaml  rollup.config.base.js  rollup.config.js
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build-demo.yml  checks.yml  publish.yml
android/: build.gradle.kts  consumer-rules.pro
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: SharePlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/share-demo/: package.json  pnpm-lock.yaml
examples/share-demo/src-tauri/: Cargo.toml  tauri.conf.json
examples/share-demo/src-tauri/capabilities/: default.json
examples/share-demo/src-tauri/src/: lib.rs  main.rs
examples/share-demo/src/routes/: +page.svelte
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: SharePlugin.swift
ios/templates/: ShareViewController.swift
macos/templates/: ShareExtension-Info.plist  ShareViewController.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: clear_pending_shared_content.toml  get_pending_shared_content.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  listeners.rs  macos.rs  mobile.rs  models.rs  windows.rs
