[package]
name = "tauri-plugin-sharekit"
version = "0.3.0"
description = "A Tauri v2 plugin that enables sharing content with native sharing interfaces on Android, iOS, macOS and Windows."
edition = "2021"
authors = [ "You" ]
license = "MIT"
repository = "https://github.com/Choochmeque/tauri-plugin-sharekit"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-sharekit"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.7.0" }
log = "0.4"
thiserror = "2"
serde_repr = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-foundation = "0.3"
objc2-foundation = { version = "0.3", features = [
  "NSString",
  "NSBundle",
  "NSUserDefaults",
  "NSData",
  "NSFileManager",
  "NSURL",
  "NSPathUtilities",
] }
objc2-app-kit = { version = "0.3", features = ["NSSharingService", "NSView", "NSResponder"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "ApplicationModel_DataTransfer",
  "Foundation",
  "Foundation_Collections",
  "Storage",
  "Storage_FileProperties",
  "Storage_Search",
  "Storage_Streams",
  "Win32_System_WinRT",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  # Share Target support
  "ApplicationModel",
  "ApplicationModel_Activation",
  "ApplicationModel_Core",
  "ApplicationModel_DataTransfer_ShareTarget",
  "Win32_Storage_Packaging_Appx",
] }
windows-collections = "0.2"

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = ["build"] }
